refactor(pom.xml): fix argLine from Surefire - CI errors