@@ -132,7 +132,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven-surefire-version}</version>
         <configuration>
-          <argLine>${argLine} -XX:MaxPermSize=256m</argLine>
+          <argLine>${argLine}</argLine>
         </configuration>
       </plugin>
       <plugin>
